@@ -5,6 +5,7 @@ python-oslo.messaging (1.13.0-1) UNRELEASED; urgency=medium
   * Add myself to Uploaders.
   * Ensure that unit test failures result in a package build failure.
   * Add new binary package for oslo-messaging-zmq-receiver.
+  * Explicitly install python to python-oslo.messaging.
   * Rename source package to python-oslo.messaging.
   * Re-align with Ubuntu:
     - d/control: Add Breaks/Replaces and transitional package for
